--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.17",
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "country-flag-icons": "^1.4.11",
     "date-fns": "^2.11.1",
+    "framer-motion": "4",
     "gray-matter": "^4.0.2",
+    "i18next": "^21.4.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-resources-to-backend": "^1.0.0",
+    "lodash": "^4.17.21",
     "next": "^11.0.0",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.13.0",
+    "react-icons": "^4.3.1",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-i18next": "^8.1.0",
+    "typescript": "^4.4.4"
   }
 }
